--- a/src/config/project-scratch-def.json
+++ b/src/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "bdovh company",
+  "orgName": "ajakub company",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
