--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -12,6 +12,19 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Install SFDX
+        run: |
+          node --version
+          npm install -g sfdx-cli
+          export SFDX_DISABLE_DNS_CHECK=true
+          echo "Version of SFDX CLI is: $(sfdx --version)"
+      
+      - name: Run Apex Tests
+        run: |
+          cd src
+          sf apex run test
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
