--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -8,6 +8,8 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    outputs:
+      apex-tests: ${{ steps.apex.outputs.text }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -38,7 +40,55 @@ jobs:
       - name: Run Apex Tests
         run: |
           cd src
-          sfdx apex run test -l RunLocalTests --loglevel=trace -y -c -r json -d ./tests/apex -w 999999
+          echo $(sfdx apex run test -l RunLocalTests --loglevel=trace -y -c -r json -d ./tests/apex -w 999999) > tests.json
+
+      - name: "Process Apex tests results"
+        id: "apex"
+        run: |
+          message=$(cat tests.json | jq '.message' -r)
+          if [[ null == "$message" ]]
+          then
+            echo "No message"
+          else
+            message="message: $message"
+            echo $message
+            echo "text=$message" >> $GITHUB_OUTPUT
+            exit 0;
+          fi
+
+          outcome=$(cat tests.json | jq '.result .summary .outcome' -r)
+          coverage=$(cat tests.json | jq '.result .summary .testRunCoverage' -r)
+          cov=$(echo $coverage |tr -d '%')
+          failures=$(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) | .FullName, .Outcome, .Message' -r)
+          message="Integrity verification Apex tests run result: $outcome. Total coverage: $coverage."
+          if [ -z "$failures" ]
+          then
+            echo "No Failures"
+          else
+            failures="${failures//'%'/'%25'}"
+            failures="${failures//$'\n'/'%0A'}"
+            failures="${failures//$'\r'/'%0D'}"
+            message="$message Failures: $failures"
+          fi
+
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .Outcome')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .MethodName')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .Name')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .ApexClass.Name')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .FullName')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) | .FullName, .Outcome, .Message')
+
+          anyCompilationFailures=$(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("CompileFail")) | .FullName, .Outcome, .Message')
+          if [ -z "$anyCompilationFailures" ]
+          then
+            echo "No Compilation Failures"
+          else
+            echo "Complilation Failures: $anyCompilationFailures "
+            message="Complilation Failures: $anyCompilationFailures $message"
+            echo "text=$message" >> $GITHUB_OUTPUT
+            exit 0;
+          fi
+          echo "text=$message" >> $GITHUB_OUTPUT
 
       - name: "Delete scratch org"
         run: |
@@ -49,3 +99,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+fail-if-unit-tests-fail:
+    runs-on: ubuntu-latest
+    needs: sonarcloud
+    name: Fail workflow if unit tests fail
+    steps:
+      - name: Verify
+        run: |
+          apexTests="${{needs.sonarcloud.outputs.apex-tests}}"
+          echo "$apexTests"
+          if [[ "$apexTests" == *"failures"* || "$apexTests" == *"Failures"* ]]; then
+            echo "failures present in apexTests results"
+            exit 1;
+          fi
