try to update report path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
 
-sonar.apex.coverage.reportPath=src/tests/apex
+sonar.apex.coverage.reportPath=src/tests.json
 sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
