--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
-sonar.apex.coverage.reportPath=src/tests.json
+sonar.apex.coverage.reportPath=src/tests/apex/test-result-codecoverage.json
+sonar.coverage.exclusions=**/*Test.cls
 #sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
