--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -30,7 +30,7 @@ jobs:
           echo "Installing jest by command 'npm install @salesforce/sfdx-lwc-jest --save-dev'"
           npm install @salesforce/sfdx-lwc-jest --save-dev
           echo "Running Jest unit tests"
-          npm run test:unit:coverage --passWithNoTests
+          npm run test:unit:coverage
 
       - name: Authorize DevHub
         run: |
