Add coverage check (#3)
* Try running test coverage

* Add lwc jest tests

* Setup SO with DH

* Remove LWC Jests execution

* Update path to scratch org definition file

* Decouple apex test failures from workflow run

* Fix Invalid workflow file: .github/workflows/sonar.yml#L103
The workflow is not valid. .github/workflows/sonar.yml (Line: 103, Col: 1): Unexpected value 'fail-if-unit-tests-fail'

* try to update report path

* Fix Code Coverage Report File

* Exclude Javascript files

* update package.json

* Revert "Remove LWC Jests execution"

This reverts commit 021bb3082b68753127d8bd0583eca85e92dd33ae.

* Try to get LWC coverage

* Revert "Exclude Javascript files"

This reverts commit 6c17f0e6fd584934606bdb7137474a33f1e273e8.

* Move  --passWithNoTests into package.json

* Add -- to pass the required attribute to jest

* Revert "Revert "Exclude Javascript files""

This reverts commit cedd0900f044f6a7faa14c277003dadf7da43d26.

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -8,12 +8,118 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    outputs:
+      apex-tests: ${{ steps.apex.outputs.text }}
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Install SFDX
+        run: |
+          node --version
+          npm install -g sfdx-cli
+          export SFDX_DISABLE_DNS_CHECK=true
+          echo "Version of SFDX CLI is: $(sfdx --version)"
+      
+      - name: "Run LWC Jest tests"
+        run: |
+          cd src
+          echo "Installing npm by command 'npm install'"
+          npm install
+          echo "Installing jest by command 'npm install @salesforce/sfdx-lwc-jest --save-dev'"
+          npm install @salesforce/sfdx-lwc-jest --save-dev
+          echo "Running Jest unit tests"
+          npm run test:unit:coverage
+
+      - name: Authorize DevHub
+        run: |
+          echo ${{secrets.SF_ORG_DH}} > ./DEVHUB_SFDX_URL.txt
+          sfdx auth:sfdxurl:store -f ./DEVHUB_SFDX_URL.txt -a dh -d
+
+      - name: Create Scratch Org
+        run: |
+          cd src
+          sfdx force:org:create -v dh -f config/project-scratch-def.json -a scratch-org -s -d 1
+      
+      - name: Deploy source metadata
+        run: |
+          cd src
+          sfdx force:source:push
+      
+      - name: Run Apex Tests
+        run: |
+          cd src
+          echo $(sfdx apex run test -l RunLocalTests --loglevel=trace -y -c -r json -d ./tests/apex -w 999999) > tests.json
+
+      - name: "Process Apex tests results"
+        id: "apex"
+        run: |
+          message=$(cat tests.json | jq '.message' -r)
+          if [[ null == "$message" ]]
+          then
+            echo "No message"
+          else
+            message="message: $message"
+            echo $message
+            echo "text=$message" >> $GITHUB_OUTPUT
+            exit 0;
+          fi
+
+          outcome=$(cat tests.json | jq '.result .summary .outcome' -r)
+          coverage=$(cat tests.json | jq '.result .summary .testRunCoverage' -r)
+          cov=$(echo $coverage |tr -d '%')
+          failures=$(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) | .FullName, .Outcome, .Message' -r)
+          message="Integrity verification Apex tests run result: $outcome. Total coverage: $coverage."
+          if [ -z "$failures" ]
+          then
+            echo "No Failures"
+          else
+            failures="${failures//'%'/'%25'}"
+            failures="${failures//$'\n'/'%0A'}"
+            failures="${failures//$'\r'/'%0D'}"
+            message="$message Failures: $failures"
+          fi
+
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .Outcome')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .MethodName')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .Name')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .ApexClass.Name')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) .FullName')
+          echo $(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("Fail")) | .FullName, .Outcome, .Message')
+
+          anyCompilationFailures=$(cat tests.json | jq '.result .tests [] | select( .Outcome | contains("CompileFail")) | .FullName, .Outcome, .Message')
+          if [ -z "$anyCompilationFailures" ]
+          then
+            echo "No Compilation Failures"
+          else
+            echo "Complilation Failures: $anyCompilationFailures "
+            message="Complilation Failures: $anyCompilationFailures $message"
+            echo "text=$message" >> $GITHUB_OUTPUT
+            exit 0;
+          fi
+          echo "text=$message" >> $GITHUB_OUTPUT
+
+      - name: "Delete scratch org"
+        run: |
+          sfdx org:delete:scratch -p -o scratch-org
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  fail-if-unit-tests-fail:
+    runs-on: ubuntu-latest
+    needs: sonarcloud
+    name: Fail workflow if unit tests fail
+    steps:
+      - name: Verify
+        run: |
+          apexTests="${{needs.sonarcloud.outputs.apex-tests}}"
+          echo "$apexTests"
+          if [[ "$apexTests" == *"failures"* || "$apexTests" == *"Failures"* ]]; then
+            echo "failures present in apexTests results"
+            exit 1;
+          fi
