--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,9 @@
 sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
 
-#sonar.coverage.exclusions=src/**/*
+sonar.apex.coverage.reportPath=src/tests/apex/test-result-codecoverage.json
+#sonar.coverage.exclusions=**/*Test.cls, **/*.js
+sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
 #sonar.projectVersion=1.0
