--- a/src/package.json
+++ b/src/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "lint": "eslint **/{aura,lwc}/**",
     "test": "npm run test:unit",
-    "test:unit": "sfdx-lwc-jest",
-    "test:unit:watch": "sfdx-lwc-jest --watch",
-    "test:unit:debug": "sfdx-lwc-jest --debug",
-    "test:unit:coverage": "sfdx-lwc-jest --coverage",
+    "test:unit": "sfdx-lwc-jest -- --passWithNoTests",
+    "test:unit:watch": "sfdx-lwc-jest --watch -- --passWithNoTests",
+    "test:unit:debug": "sfdx-lwc-jest --debug -- --passWithNoTests",
+    "test:unit:coverage": "sfdx-lwc-jest --coverage -- --passWithNoTests",
     "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-    "postinstall": "husky install",
+    "postinstall": "cd .. && husky install src/.husky",
     "precommit": "lint-staged"
   },
   "devDependencies": {
