--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.organization=softservesalesforce
 
 sonar.apex.coverage.reportPath=src/tests/apex/test-result-codecoverage.json
 sonar.coverage.exclusions=**/Test*.cls, **/*.js, **/*Test.cls
+sonar.exclusions=src/srcforce-app/main/default/classes/libs/**
 # sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
