--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
 
 sonar.apex.coverage.reportPath=src/tests/apex/test-result-codecoverage.json
-sonar.coverage.exclusions=**/Test*.cls, **/*.js, **/*Test.cls
-sonar.exclusions=src/srcforce-app/main/default/classes/libs/**
+sonar.coverage.exclusions=**/Test*.cls, **/*.js, **/*Test.cls, **/fflib_*.cls
+sonar.exclusions=src/force-app/main/default/classes/libs/**
 # sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
