UC#2 Integrity sanity check

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
+sonar.sources=force-app/main/default/classes
+sonar.apex.coverage.reportPath=src/SF-chatGPT-productivity-checkSF-chatGPT-productivity-checksrc/test-result-7075t00001fe37L-junit.xml
 
 #sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
