--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
 sonar.sources=src/force-app/main/default/classes
-sonar.apex.coverage.reportPath=src/SF-chatGPT-productivity-checkSF-chatGPT-productivity-checksrc/test-result-7075t00001fe37L-junit.xml
+sonar.apex.coverage.reportPath=src/SF-chatGPT-productivity-checkSF-chatGPT-productivity-checksrc/test-result-codecoverage.json
 
 #sonar.coverage.exclusions=src/**/*
 # This is the name and version displayed in the SonarCloud UI.
