--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=SoftServeSalesforce_SF-chatGPT-productivity-check
 sonar.organization=softservesalesforce
 
 sonar.apex.coverage.reportPath=src/tests/apex/test-result-codecoverage.json
-#sonar.coverage.exclusions=**/*Test.cls, **/*.js
-sonar.coverage.exclusions=src/**/*
+sonar.coverage.exclusions=**/Test*.cls, **/*.js, **/*Test.cls, **/fflib_*.cls
+sonar.exclusions=src/force-app/main/default/libs/**
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
 #sonar.projectVersion=1.0
