Disabling dups check for tests.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=softservesalesforce
 
 sonar.apex.coverage.reportPath=src/tests/apex/test-result-codecoverage.json
 sonar.coverage.exclusions=**/Test*.cls, **/*.js, **/*Test.cls, **/fflib_*.cls
-sonar.exclusions=src/force-app/main/default/libs/**
+sonar.exclusions=src/force-app/main/default/libs/**, **/Test*.cls, **/*Test.cls
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SF-chatGPT-productivity-check
 #sonar.projectVersion=1.0
